--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Anirudh Singla</title>
+  <script type="text/javascript">
+	function onmouseover
+  
+  </script>
   <style>
+	<!--
+	.head-image{
+    display: none;
+	}
+	.front{
+    display: inline;
+	}
+	-->
     .fa {
       padding: 10px;
       font-size: 10px;
@@ -66,11 +78,23 @@
   </style>
 </head>
 <body>
-  
-  <img id="img-circle" src="http://i.imgur.com/xavflOL.jpg">
+	<!-- <div class="image-holder">
+	<img class="circle" src="circle.png"/>
+    <img class="head-image up" src="up.jpg"/>
+    <img class="head-image up-left" src="upleft.jpg"/>
+    <img class="head-image left" src="left.jpg"/>
+    <img class="head-image down-left" src="downleft.jpg"/>
+    <img class="head-image down" src="down.jpg"/>
+    <img class="head-image down-right" src="downright.jpg"/>
+    <img class="head-image right" src="right.jpg"/>
+    <img class="head-image up-right" src="upright.jpg"/>
+    <img class="head-image front" src="front.jpg"/>	
+	</div>
+ 	-->
+  <img id="img-circle" src="http://i.imgur.com/xavflOL.jpg"/>
   <p>Hi! I'm Anirudh Singla, A python developer and tech geeky and always keen to learn new technology.</p>
   <a href="#" class="fa fa-facebook" title="facebook" onclick="location.href='https://www.facebook.com/anirudh.singla.372'"></a>
-  <a href="#" class="fa fa-twitter" title="twitter" onclick="location.href='https://drive.google.com/open?id=0B6Qm8O3aAlRIbmt6V2MxUlg5RVE'"></a>
+  <a href="#" class="fa fa-twitter" title="twitter" onclick="location.href='https://twitter.com/anirudhsingla8'"></a>
   <a href="#" class="fa fa-google" title="google" onclick="location.href='https://www.google.co.in'"></a>
   <a href="#" class="fa fa-linkedin" title="linked.in" onclick="location.href='https://www.linkedin.com/in/anirudh-singla-447b8a119/'"></a>
 
